2007-03-21  Martin Hunt  <hunt@redhat.com>

	* symbols.c (_stp_del_module): Add a call to _stp_module_relocate
	to clear its cache.

2007-03-20  Frank Ch. Eigler  <fche@elastic.org>

	* symbols.c (_stp_do_symbols): Add cautionary blurb for important
	setup of _stp_modules[0]->text.

2007-03-20  Martin Hunt  <hunt@redhat.com>

	* symbols.c (_stp_alloc_module): Fix up error
	cleanup when malloc fails.

2007-03-14  Martin Hunt  <hunt@redhat.com>

	* transport_msgs.h: ifdef old messages as such.
	Add support for new transport.
	* relayfs.c: Simplify and add new interface to look
	like utt.
	* utt.[ch]: New files. Similar to the proposed utt interface.
	These setup and teardown relayfs on debugfs.
	* control.c: New file. Implements a simple control channel.
	A small subset of procfs.c.
	* procfs.c: This is now only used for old kernels lacking newer 
	relayfs. Change STP_RELAYFS to STP_BULKMODE. Use new
	messages from transport_msgs.h. Don't support 
	RELAYFS_CHANNEL_VERSION >= 4. CHanges all control channel functions
	to new names. Use pids instead of module names in /proc names.

2007-03-12  Frank Ch. Eigler  <fche@elastic.org>

	* procfs.c (_stp_register_procfs): Use /proc/MODULE rather than
	/proc/systemtap/MODULE.

2007-03-12  Frank Ch. Eigler  <fche@redhat.com>

	PR 4179.
	Based on patch from Vasily Averin <vvs@sw.ru>:
	* procfs.c (_stp_register_procfs): Recover from partial failures.
	* transport.c (_stp_transport_open): Ditto.

2007-01-30  Martin Hunt  <hunt@redhat.com>

	* symbols.c: Comment out many debug lines.

2007-01-29  Martin Hunt  <hunt@redhat.com>

	* procfs.c: Count allocated IO memory.
	* symbols.c: Use _stp_kmalloc() and _stp_kzalloc().
	* transport.c: Count allocated IO memory.
	
2007-01-09  Martin Hunt  <hunt@redhat.com>

	* symbols.c (_stp_del_module): Fix so memory allocated
	for module 0 (kernel) is freed.
	(_stp_free_modules): No need to lock module list.

2006-12-20  Martin Hunt  <hunt@redhat.com>
